--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,13 +153,13 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #62d4e5;
+		color: #f56a6a;
 		text-decoration: none;
 	}
 
 		a:hover {
-			border-bottom-color: #62d4e5;
-			color: #62d4e5 !important;
+			border-bottom-color: #f56a6a;
+			color: #f56a6a !important;
 		}
 
 			a:hover strong {
@@ -1797,7 +1797,7 @@ input, select, textarea {
 	}
 
 	header.major > :last-child {
-		border-bottom: solid 3px #62d4e5;
+		border-bottom: solid 3px #f56a6a;
 		display: inline-block;
 		margin: 0 0 2em 0;
 		padding: 0 0.75em 0.5em 0;
@@ -1864,8 +1864,8 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #62d4e5;
-			box-shadow: 0 0 0 1px #62d4e5;
+			border-color: #f56a6a;
+			box-shadow: 0 0 0 1px #f56a6a;
 		}
 
 	select {
@@ -1973,8 +1973,8 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #62d4e5;
-			box-shadow: 0 0 0 1px #62d4e5;
+			border-color: #f56a6a;
+			box-shadow: 0 0 0 1px #f56a6a;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2311,7 +2311,7 @@ input, select, textarea {
 			}
 
 			ul.contact li:before {
-				color: #62d4e5;
+				color: #f56a6a;
 				display: inline-block;
 				font-size: 1.5em;
 				height: 1.125em;
@@ -2370,16 +2370,16 @@ input, select, textarea {
 			}
 
 				ul.pagination li > .page.active {
-					background-color: #62d4e5;
+					background-color: #f56a6a;
 					color: #ffffff !important;
 				}
 
 					ul.pagination li > .page.active:hover {
-						background-color: #6fd8e7;
+						background-color: #f67878;
 					}
 
 					ul.pagination li > .page.active:active {
-						background-color: #55d0e3;
+						background-color: #f45c5c;
 					}
 
 			ul.pagination li:first-child {
@@ -2488,8 +2488,8 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 0.375em;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #62d4e5;
-		color: #62d4e5 !important;
+		box-shadow: inset 0 0 0 2px #f56a6a;
+		color: #f56a6a !important;
 		cursor: pointer;
 		display: inline-block;
 		font-family: "Roboto Slab", serif;
@@ -2510,7 +2510,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(98, 212, 229, 0.05);
+			background-color: rgba(245, 106, 106, 0.05);
 		}
 
 		input[type="submit"]:active,
@@ -2518,7 +2518,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(98, 212, 229, 0.15);
+			background-color: rgba(245, 106, 106, 0.15);
 		}
 
 		input[type="submit"].icon:before,
@@ -2560,7 +2560,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #62d4e5;
+			background-color: #f56a6a;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -2570,7 +2570,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #6fd8e7;
+				background-color: #f67878;
 			}
 
 			input[type="submit"].primary:active,
@@ -2578,7 +2578,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #55d0e3;
+				background-color: #f45c5c;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2677,7 +2677,7 @@ input, select, textarea {
 			}
 
 				.features article .icon:before {
-					color: #62d4e5;
+					color: #f56a6a;
 					font-size: 2.75rem;
 					position: relative;
 					top: 0.05em;
@@ -3331,7 +3331,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		border-bottom: solid 5px #62d4e5;
+		border-bottom: solid 5px #f56a6a;
 		padding: 6em 0 1em 0;
 		position: relative;
 	}
@@ -3526,7 +3526,7 @@ input, select, textarea {
 		}
 
 			#menu ul a:hover, #menu ul span:hover {
-				color: #62d4e5;
+				color: #f56a6a;
 			}
 
 			#menu ul a.opener, #menu ul span.opener {
@@ -3564,7 +3564,7 @@ input, select, textarea {
 				}
 
 				#menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-					color: #62d4e5;
+					color: #f56a6a;
 				}
 
 				#menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
